# Techfusion

./: README.md
New-OSWorld/: .gitignore  .vmware_vms  DOCUMENTATION.md  README.md  config.yaml  manual_task.json  pyproject.toml  requirements.txt
New-OSWorld/SFT/chrome/bb5e4c0d-f964-439c-97b6-bdb9747de3f4/: osw.sft.1774041065.ipynb  step_0_before.xml  step_1_before.xml  step_2_before.xml  step_3_before.xml  trajectory.jsonl
New-OSWorld/new_osworld/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
New-OSWorld/new_osworld/agents/: __init__.py  base.py  prompt_agent.py  prompts.py
New-OSWorld/new_osworld/agents/llm_clients/: __init__.py  anthropic_client.py  base.py  dashscope_client.py  google_client.py  groq_client.py  openai_client.py
New-OSWorld/new_osworld/agents/utils/: a11y_tree.py  image_utils.py  parsing.py
New-OSWorld/new_osworld/environment/: __init__.py  actions.py  desktop_env.py
New-OSWorld/new_osworld/environment/controllers/: __init__.py  python_controller.py  setup_controller.py
New-OSWorld/new_osworld/environment/evaluators/: __init__.py
New-OSWorld/new_osworld/environment/evaluators/getters/: __init__.py
New-OSWorld/new_osworld/environment/evaluators/metrics/: __init__.py
New-OSWorld/new_osworld/environment/providers/: __init__.py  aliyun.py  aws.py  azure.py  base.py  docker.py  virtualbox.py  vmware.py  volcengine.py
New-OSWorld/new_osworld/runner/: __init__.py  a11y_enricher.py  batch.py  manual.py  parallel.py  single.py
New-OSWorld/new_osworld/server/: __init__.py
New-OSWorld/new_osworld/tech_tooling/: __init__.py  delivery_validator.py  notebook_builder.py  trajectory_converter.py  trajectory_replayer.py
